@@ -9,9 +9,21 @@
   </div>
 
   <div class="keyword-input">
-    <h1 i18n:translate="">Add a keyword</h1>
+    <h1 i18n:translate="">Keywords</h1>
+
+    <div class="suggest-keyword" i18n:translate="">
+      If you would like to suggest a keyword, send an e-mail to
+      <a href=""
+        tal:attributes="href string:mailto:${view/suggest_email}"
+        tal:content="view/suggest_name"
+        i18n:name="recipient">
+        Mr X
+      </a>.
+    </div>
+
+    <label for="new_keyword_code" i18n:translate="">Search</label>
     <input type="text" id="new_keyword_code" name="new_keyword_code" />
-    <input type="button" name="add_new_keyword_button" value="Hinzufügen" />
+
   </div>
 
   <div class="typeahead-results">
@@ -26,4 +38,5 @@
       <!-- filled by javascript -->
     </ul>
   </div>
+
 </tal:block>
