@@ -12,7 +12,9 @@ zeit.cms changes
   #4127).
 - Objekte können jetzt kopiert werden: Aktion auf Ordnern bei der man das zu
   kopierende Objekt aus dem Clipboard wählt (bug #4130).
-- Breadcrubs sind wieder draggable.
+- Breadcrumbs sind wieder draggable.
+- Keine freie Eingabe von Keywords mehr (bug #4120).
+- Doppelte Eingabe von Keywords nicht mehr möglich (bug #4119).
 
 0.9.10 (2008-04-22)
 -------------------
